BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Clinical_Trials_Participation__c.object
<CustomObject>
    <description>Display Clinical Trials Participation linked to HCPs, data loaded is at the HCP level</description>
    <fields>
        <fullName>Account_BMS_IC__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Trials Participation</relationshipLabel>
        <relationshipName>Clinical_Trials_Publications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Account_BMS_IC__r.Account_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Source_Country_BMS_CORE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Trial_BMS_IC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Trial sponsored by BMS</description>
        <label>BMS Trial?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CT_URL_BMS_IC__c</fullName>
        <description>Clinical Trial URL</description>
        <label>CT URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_ID_BMS_IC__c</fullName>
        <externalId>true</externalId>
        <label>Clinical Trial ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company_BMS_IC__c</fullName>
        <description>Company for which this clinical trial is being done.</description>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_IC__c</fullName>
        <description>For the capture of Competitor Products (may include topics and procedural data) under study in a Clinical Trial (that are not maintained in Product Catalog).</description>
        <label>Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_BMC_IC__c</fullName>
        <description>Conditions studied as part of trial</description>
        <label>Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Actinic Keratosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Ulcerative Colitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Kidney Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Lung Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adenocarcinoma of the Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis, Rheumatoid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brain and Central Nervous System Tumors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear Cell Renal Cell Carcinoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorectal Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esophageal Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esophagus Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estrogen Receptor-positive Breast Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fallopian Tube Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibromyalgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastric Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HER2-negative Breast Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ischemic Heart Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lung Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lymphedema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lymphoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melanoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melanoma (Skin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metastatic Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Myeloma and Plasma Cell Neoplas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myocardial Infarction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osteoporosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ovarian Cancer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description_BMS_IC__c</fullName>
        <description>Description of Clinical Trial Participation</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incentive_BMS_IC__c</fullName>
        <description>What the incentive for the clinical trial is.</description>
        <label>Incentive</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interventions_BMS_IC__c</fullName>
        <description>Interventions included in Clinical Trial</description>
        <label>Interventions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_BMS_IC__c</fullName>
        <description>The date on which this information was last updated.</description>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCT_ID_BMS_IC__c</fullName>
        <description>NCT ID for Competitor Trials</description>
        <externalId>true</externalId>
        <label>NCT ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_Date_BMS_IC__c</fullName>
        <description>Date on which the prescriber began
participation in the trial.</description>
        <label>Participation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Count_BMS_IC__c</fullName>
        <description>Number of Patients</description>
        <label>Patient Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_BMS_IC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BMS Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Clinical Trials Participation</relationshipLabel>
        <relationshipName>Clinical_Trials_Publications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocol_BMS_IC__c</fullName>
        <description>What the protocol for the clinical trial is.</description>
        <externalId>true</externalId>
        <label>Protocol ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_BMS_IC__c</fullName>
        <description>Sponsor of Clinical Trial</description>
        <label>Sponsor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_BMS_IC__c</fullName>
        <description>Status of Clinical Trial</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active, not recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Study_Name_BMS_IC__c</fullName>
        <description>Name of the Clinical Study.</description>
        <label>Study Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date_BMS_IC__c</fullName>
        <description>Clinical Trial End Date</description>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date_BMS_IC__c</fullName>
        <description>Clinical Trial Start Date</description>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <label>Clinical Trials Participation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_BMS_IC__c</columns>
        <columns>BMS_Trial_BMS_IC__c</columns>
        <columns>Company_BMS_IC__c</columns>
        <columns>Protocol_BMS_IC__c</columns>
        <columns>Product_BMS_IC__c</columns>
        <columns>Competitor_Product_IC__c</columns>
        <columns>Description_BMS_IC__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CTP-{0}</displayFormat>
        <label>Clinical Trials Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trials Participation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>